--- a/src/app/components/lista-productos/modal-producto/modal-producto.component.html
+++ b/src/app/components/lista-productos/modal-producto/modal-producto.component.html
@@ -149,6 +149,22 @@
               El campo es requerido</mat-error
             >
           </mat-form-field>
+          <mat-form-field
+              class="flex-auto"
+              floatLabel="always"
+              appearance="outline"
+            >
+              Software
+              <mat-slide-toggle
+                formControlName="hardware"
+                [checked]="false"
+              ></mat-slide-toggle>
+              Hardware
+              <textarea matInput hidden></textarea>
+              <mat-error *ngIf="this.hardware.hasError('required')">
+                El campo es requerido</mat-error
+              >
+            </mat-form-field>
           <button
         class="mx-1 "
         color="primary"
@@ -166,6 +182,7 @@
           <thead class="text-xs text-gray-700 uppercase bg-gray-50">
             <tr>
               <th class="px-6 py-3">Características del producto</th>
+              <th class="px-6 py-3">Tipo</th>
               <th class="px-6 py-3">Acción</th>
             </tr>
           </thead>
@@ -186,6 +203,12 @@
                 class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap"
               >
                 {{ row.nombre }}
+              </th>
+              <th
+                scope="row"
+                class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap"
+              >
+                {{ row.tipo }}
               </th>
               <td class="px-3 py-2">
                 <a
